--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.6",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
